--- a/first.yaml
+++ b/first.yaml
@@ -1,7 +1,13 @@
 ---
-appVersion: v1
+apiVersion: v1
 kind: pod
 metadata:
   name: alp
 spec:
-  containers: alpine
+  containers:
+  - name: alp
+    image: alpine
+    command:
+      - sleep
+      - 1d
+    
